# rofi-snippets

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build-publish.yaml
examples/: basic.json
src/: lib.rs
