[package]
name = "rofi-snippets"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wayland", "x11"]
wayland = ["enigo/wayland"]
x11 = ["enigo/xdo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rofi-mode = "0.4"
enigo = { version = "0.4", default-features = false }
nix = { version = "0.30", features = ["process"] }
