[package]
name = "rofi-snippets"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wayland", "x11"]
wayland = ["enigo/wayland"]
x11 = ["enigo/xdo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rofi-mode = "0.4"
enigo = { version = "0.4", default-features = false }
nix = { version = "0.30", features = ["process"] }

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libgtk-4-dev:$CROSS_DEB_ARCH libxdo-dev:$CROSS_DEB_ARCH libxkbcommon-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libgtk-4-dev:$CROSS_DEB_ARCH libxdo-dev:$CROSS_DEB_ARCH libxkbcommon-dev:$CROSS_DEB_ARCH"
]
